--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.6",
+    "hookrouter": "^1.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "@types/classnames": "^2.2.11",
+    "@types/hookrouter": "^2.2.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
