--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "classnames": "^2.2.6",
     "hookrouter": "^1.2.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
