--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "test:watch": "npx jest --watch",
     "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
     "build:prod": "env NODE_ENV=production webpack --config webpack.config.js",
     "start": "env NODE_ENV=development webpack-dev-server"
@@ -21,6 +22,7 @@
     "@svgr/webpack": "^5.5.0",
     "@types/classnames": "^2.2.11",
     "@types/hookrouter": "^2.2.5",
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
@@ -41,12 +43,14 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "husky": "^4.3.7",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
