--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
+    "copy-webpack-plugin": "6.2.1",
     "css-loader": "^5.0.1",
     "css-modules-typescript-loader": "^4.0.1",
     "eslint": "^7.17.0",
