--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,4 +1,4 @@
 {
   "routes": [{ "src": "/.*", "dest": "/index.html"}],
-  "redirects": [{"source": "*", "destination":"/"}]
+  "redirects": [{"source": "/(.*)", "destination":"/"}]
 }
