--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "hookrouter": "^1.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "copy-webpack-plugin": "6.2.1",
