--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,3 +1,8 @@
 {
-  "redirects": [{"source": "/(.*)", "destination":"/"}]
+  "redirects": [
+    { "source": "/(.*)", "destination":"/"}, 
+    { "source": "(.*)", "destination": "/" },
+    { "source": "/(.*)", "destination":""}, 
+    { "source": "(.*)", "destination": "" }
+  ]
 }
