--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,8 +1,3 @@
 {
-  "redirects": [
-    { "source": "/(.*)", "destination":"/"}, 
-    { "source": "(.*)", "destination": "/" },
-    { "source": "/(.*)", "destination":""}, 
-    { "source": "(.*)", "destination": "" }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "/"}]
 }
