--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,3 +1,7 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "routes": [
+    { "src": "/", "dest": "/" },
+    { "src": "/.*", "dest": "/" },
+    { "src": "/pokedex", "dest": "/" }
+  ]
 }
