--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,7 +1,1 @@
-{
-  "routes": [
-    { "src": "/", "dest": "/" },
-    { "src": "/.*", "dest": "/" },
-    { "src": "/pokedex", "dest": "/" }
-  ]
-}
+{ "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }] }
