--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,1 +1,3 @@
-{ "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }] }
+{ 
+  "redirects": [{ "source": "/(.*)", "destination": "/index.html" }] 
+}
